--- a/plugins.properties
+++ b/plugins.properties
@@ -4,5 +4,5 @@ slim.timeout=10
 FIXTURE_FOLDER=.
 DOTNET_VERSION=net5.0
 COMMAND_PATTERN=%m ${FITSHARP_FOLDER}/${DOTNET_VERSION}/Runner.dll -c ${FIXTURE_FOLDER}/config.xml
-TEST_RUNNER=dotne
+TEST_RUNNER=dotnet
 SLIM_PORT=8475
